# duello

./: .gitignore  .zenodo.json  CLAUDE.md  Cargo.toml  INTEGRATION.md  README.md  copilot-report_v1.md  eigenvalue-woes.md  pyproject.toml
.github/workflows/: pypi.yml
examples/: lazy_static.rs  lookup.rs
examples/calvados3/: 2CDS.xyz  takahashi2008_rotational_diffusion.csv  takahashi2008_rotational_diffusion.json  takahashi2008_virial.csv  takahashi2008_virial.json  topology.yaml
examples/cppm/: .pmf_280_0.001.dat.swp  plotting.ipynb  topology.yaml  valuesB2.txt
latex_spectral_analysis/: .gitignore  .main.tex.swp  main.tex  references.bib
scripts/: calvados3.sh  cppm.sh  mfpt6d.py  pdb2xyz.py  plot_cell_diffusion.py  plot_cell_vs_experiment.py  plot_diffusion.py  plot_spectral6d.py  run_duello.sh  spectral.py  spectral6d.py  zwanzig6d.py
src/: anglescan.rs  diffusion.rs  energy.rs  fibonacci.rs  icoscan.rs  icosphere.rs  icotable.rs  lib.rs  loader.rs  main.rs  report.rs  sample.rs  spherical.rs  structure.rs  table.rs  vertex.rs  virial.rs  web_api.rs
src/backend/: cpu.rs  gpu.rs  mod.rs  simd.rs
src/shaders/: energy.wgsl
